--- a/cache_api/Dockerfile
+++ b/cache_api/Dockerfile
@@ -1,4 +1,5 @@
 # Base image
+# Python 3.8 image from Docker Hub as the base image
 FROM python:3.8
 
 # Copy the requirements file into the container and install the required packages
@@ -11,10 +12,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy whole project to docker home directory.
 COPY . .
-
-# Set environment variables
-ENV MONGO_HOST localhost
-ENV MONGO_PORT 27017
 
 # Expose the port used by the Django application
 EXPOSE 8000
