Add Kubernetes to cache

--- a/cache_api/Dockerfile
+++ b/cache_api/Dockerfile
@@ -16,4 +16,4 @@ COPY . .
 # Expose the port used by the Django application
 EXPOSE 8000
 
-CMD ["runserver", "0.0.0.0:8000"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
